2004-04-16  Jeremy Fincher  <jemfinch@supybot.org>
	
	* Version 0.77.2!
	
	* Fixed numerous bugs, high and low, big and small and
	in-between.  Definitely worthy of a release.
	
	* Added a --capability option to User.list, to allow people to
	list all the users possessing a certain capability.  The main
	reason this was added is so jemfinch can tell who owns which
	Supybots on #supybot :)
	
	* Added Utilities.success, mostly for making aliases such that
	they can respond with success if no errors were encountered in
	any nested commands.
	
	* Changed the name of the new filter, colorstrip, to be
	stripcolor.  Better now than after it was highly established :)
	
	* Added configuration variables
	supybot.plugins.Services.NickServ.password (which replaces the
	old supybot.plugins.Services.password) for specifying the
	NickServ password, as well as
	supybot.plugins.Services.ChanServ.{op,halfop,voice}, which
	determine what the bot should request of ChanServ when it
	identifies or joins a channel.  These latter variables are, of
	course, channel variables.
	
	* Fixed bug #863601, plugin BadWords fails on color codes.

	* Replaced Sourceforge.{rfe,bug} with Sourceforge.tracker, which
	can query any tracker type (not just RFEs and bugs) and responds
	with more information, a la trackerSnarfer.

	* Added supybot.log.individualPluginLogfiles, which determines
	whether plugin logs will be logged to their individual logfiles
	in addition to the misc.log logfile.
	
	* Added supybot.plugins.WordStats.ignoreQueries, which, when
	true, makes the bot ignore queries (and not increment its word
	statistics).
	
	* Added the LogToIrc plugin, for sending logs to an IRC
	channel or nick.  Useful for traceback notification and whatnot.
	
	* Changed supybot.log.timestampFormat to specially handle the
	empty string -- if it's set to the empty string, it will log
	times in seconds-since-epoch format.
	
	* Added supybot.plugins.Weather.convert, which determines whether